[gd_scene load_steps=21 format=3 uid="uid://cfgy3ee8k825d"]

[ext_resource type="Script" uid="uid://bwo1rikoxc8ox" path="res://godot4/elements/bubbles/Bubble.gd" id="1_ebahq"]
[ext_resource type="PackedScene" uid="uid://c5mydm0dx5rd5" path="res://godot4/effects/BubblePopped.tscn" id="2_ijaql"]
[ext_resource type="PackedScene" uid="uid://bkt3uw0ui0kxk" path="res://godot4/effects/appear/AppearDefault.tscn" id="3_h12s8"]
[ext_resource type="Theme" uid="uid://dui8cebqku8x5" path="res://interface/themes/olympic_theme.tres" id="4_1ymov"]
[ext_resource type="Texture2D" uid="uid://brix715f5o5d1" path="res://assets/sprites/environments/bubble_big.png" id="4_f5sj8"]
[ext_resource type="AudioStream" uid="uid://bi0qw3wfqwt4a" path="res://assets/audio/gameplay/bubbles/zapsplat_cartoon_pop_mouth_001_46664.ogg" id="5_8ymtj"]
[ext_resource type="AudioStream" uid="uid://dw25rbo6knwhc" path="res://assets/audio/FX/zapsplat_cartoon_twang_bounce_boing_spring_53049.ogg" id="7_jon51"]
[ext_resource type="AudioStream" uid="uid://b7qvxsyefgie4" path="res://assets/audio/gameplay/bubbles/zapsplat_cartoon_bubble_pop_005_40277.ogg" id="7_nip4u"]
[ext_resource type="AudioStream" uid="uid://ba2kykijh6rei" path="res://assets/audio/gameplay/bubbles/zapsplat_cartoon_drip_or_bubble_pop_002_46212.mp3" id="8_luvl1"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2pppl"]
bounce = 0.8

[sub_resource type="CircleShape2D" id="CircleShape2D_o63h2"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tn7bv"]
radius = 150.0

[sub_resource type="Animation" id="Animation_7dqfj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_osksh"]
resource_name = "default"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7, 1.2, 1.6),
"transitions": PackedFloat32Array(1, -2, -2, -2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -12), Vector2(0, 6), Vector2(0, -2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.55),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(3, 3, 3, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g125i"]
_data = {
&"RESET": SubResource("Animation_7dqfj"),
&"default": SubResource("Animation_osksh")
}

[sub_resource type="Animation" id="Animation_jmnt2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hgkc3"]
resource_name = "default"
length = 2.0
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(1.1, 0.9), Vector2(0.9, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.105882), Color(1, 1, 1, 1), Color(1, 1, 1, 0.105882)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_14ggj"]
_data = {
&"RESET": SubResource("Animation_jmnt2"),
&"default": SubResource("Animation_hgkc3")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lb1fb"]
playback_mode = 1
random_pitch = 1.2
streams_count = 2
stream_0/stream = ExtResource("7_nip4u")
stream_1/stream = ExtResource("5_8ymtj")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_epica"]
random_pitch = 1.6
streams_count = 2
stream_0/stream = ExtResource("7_jon51")
stream_1/stream = ExtResource("8_luvl1")

[node name="Bubble" type="RigidBody2D" groups=["collectable"]]
collision_layer = 64
collision_mask = 2147486292
physics_material_override = SubResource("PhysicsMaterial_2pppl")
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1
linear_damp = 2.0
script = ExtResource("1_ebahq")
bubble_popped_scene = ExtResource("2_ijaql")
appear_scene = ExtResource("3_h12s8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_o63h2")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_tn7bv")

[node name="Graphics" type="Node2D" parent="."]

[node name="ContentSprite2D" type="Sprite2D" parent="Graphics"]
unique_name_in_owner = true
position = Vector2(0, 6)

[node name="Sprite2D" type="Sprite2D" parent="Graphics"]
modulate = Color(1, 1, 1, 0.901961)
texture = ExtResource("4_f5sj8")

[node name="IntroAnimation" type="AnimationPlayer" parent="Graphics"]
libraries = {
"": SubResource("AnimationLibrary_g125i")
}
autoplay = "default"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_14ggj")
}
autoplay = "default"

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
z_index = 100
z_as_relative = false
offset_left = -300.0
offset_top = -373.0
offset_right = 300.0
offset_bottom = -150.0
theme = ExtResource("4_1ymov")
theme_override_font_sizes/font_size = 80
text = "HOLD BUTTON
TO DASH!"
horizontal_alignment = 1

[node name="PopSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_lb1fb")
volume_db = 10.0
bus = &"SFX"

[node name="BounceSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_epica")
volume_db = 10.0
max_polyphony = 3
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
